--- a/index.html
+++ b/index.html
@@ -25,34 +25,30 @@
 
     
     <div class="logotpm">
-        <img src="Imagens/LogoTPM.jpg" alt="Imagem Responsiva" class="center-img">
+        <img src="Imagens/TPM.png" alt="Imagem Responsiva" class="center-img">
       </div> 
  
 
       <div class="quemsomos">
-        <h1>TPM com Você</h1>
-        <h3>A alegria de sermos filhas de Deus nos impulsiona e nos tira do lugar, muda-nos de rumo, incita-nos a ser melhores. 
-            Existe uma ordem que garante a nós mulheres acesso a uma benção que nos foi previamente entregue como filha de Deus.
-            Para isso precisamos conhecer nossa posição e fazer a uma escolha consciente e voluntária de ocupa-lá.
-            Quando não sabemos quem somos queremos ser qualquer coisa. A identidade revela quem somos, nos leva a conhecer nosso destino, nos faz experimentar o descanso.
-            Quando temos uma identidade ressignificada em Cristo, ficamos livres da necessidade de medir nosso valor nos comparando com os outros.
-            Quantas são as mulheres que estão vivendo as margens por não conhecerem quem de fato são no Senhor.
-            Não é uma questão apenas de saber, mas de reconhecer em si mesmas sua PATERNIDADE! Somos FILHAS. antes de qualquer coisa, você precisa entender que é FILHA!
+        <h1 class="h1">TPM com Você</h1>
+        <h3>A alegria de sermos filhas de Deus nos impulsiona e nos tira do lugar, muda-nos de rumo, incita-nos a ser melhores. Existe uma ordem que garante a nós mulheres acesso a uma benção que nos foi previamente entregue como filha de Deus. Para isso precisamos conhecer nossa posição e fazer uma escolha consciente e voluntária de ocupá-la. Quando não sabemos quem somos, somos levadas a sermos qualquer coisa. A identidade revela quem somos, nos leva a conhecer nosso destino, nos faz experimentar e viver o nosso propósito.. Quando temos uma identidade ressignificada em Cristo, ficamos livres da necessidade de medir nosso valor nos comparando com os outros. Quantas são as mulheres que estão vivendo as margens por não se conhecerem quem de fato são no Senhor. Não é uma questão apenas de saber, mas de reconhecer em si mesmas sua PATERNIDADE! Somos FILHAS.
+            Antes de qualquer coisa, você precisa entender que é FILHA, e acessar essa promessa.
             </h3>
       </div>
       <br>
 
-      <div class="photo-sequence">
-        <img src="Imagens/Visão.png" alt="Imagem 1">
-        <img src="Imagens/Missão.png" alt="Imagem 2">
-        <img src="Imagens/Valores.png" alt="Imagem 3">
+      <div class="sequencia">
+        <img src="Imagens/Visão.png" alt="Imagem 1" class="foto" style="margin-bottom: 40px;">
+        <img src="Imagens/Missão.png" alt="Imagem 2" class="foto" style="margin-bottom: 40px;">
+        <img src="Imagens/Valores.png" alt="Imagem 3" class="foto" style="margin-bottom: 40px;">
       </div>
 
       <br>
       <br>
 
       <div class="inscrição">
-      <h1>Faça sua Inscrição no Tempo Para Mulheres</h1>
+      <h1 class="h1">DEUS NO SECRETO 15/06 - POR QUE É TÃO DIFICIL MUDAR</h1>
+      <h2 class="h2">INSCREVA-SE</h2>
     </div>
 
     <div class="logo">
@@ -60,15 +56,15 @@
       </div> 
 
       <div class="iframe-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxcfhbcw41N69be86ZzT7IIy5fiTmD02DyW0NvjPm-80ACtQ/viewform?embedded=true" width="720" height="1280" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScxcfhbcw41N69be86ZzT7IIy5fiTmD02DyW0NvjPm-80ACtQ/viewform?embedded=true" width="640" height="1446" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
 
-        <footer class="footer">
-            <div class="footer-content">
-              <p>Contato: tpmcomvoce2024@gmail.com</p>
-              <p>Telefone: (17) 997226670</p>
-            </div>
-          </footer>
+        <footer>
+            <!-- Ícones direcionáveis -->
+            <a href="https://api.whatsapp.com/send?phone=17997226670" target="_blank"><img src="Imagens/whatsapp.png" alt="" width="30px"></a>
+            <a href="https://www.instagram.com/tpmcomvoce?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="Imagens/instagram.png" alt="" width="33px"></a>
+            <a href="https://linktr.ee/isamariana" target="_blank"><img src="Imagens/linktree.png" width="70px"></a>
+        </footer>
 
 <script src="script.js"></script>
 
